<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/backgroundGirl"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/babyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:fontFamily="@font/architects"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="115dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/countdownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/babyLabel"
        tools:ignore="MissingConstraints">

        <!-- Days timer -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/daysValue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/daysTimeLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/daysLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Hours timer -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hoursValue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/hoursTimeLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hoursLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Minutes timer -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minutesValue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/minutesTimeLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/minutesLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Seconds timer -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/secondsValue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/secondsTimeLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/secondsLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weeksCountdownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/countdownLayout"
        tools:ignore="DisableBaselineAlignment,MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <!-- Weeks timer -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/weeksValue"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/weeksTimeLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/weeksLabel"
                android:fontFamily="@font/architects"
                android:textColor="@color/primary"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pregnancyBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_left_selected"
            android:text="@string/pregnancyButtonLabel"
            android:fontFamily="@font/architects"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:elevation="0dp"
            android:stateListAnimator="@null" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nauseaBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_right_unselected"
            android:text="@string/nauseaButtonLabel"
            android:fontFamily="@font/architects"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:elevation="0dp"
            android:stateListAnimator="@null" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/pacifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>